# fengguan-crm-sys

./: .gitignore  123.txt  README.md
crm-cpp/: .gitignore  CMakeLists.txt  CrmCpp.sln  README.md  copy-resources.bat
crm-cpp/arch-demo/: CMakeLists.txt  arch-demo.vcxproj  arch-demo.vcxproj.filters  main.cpp
crm-cpp/crm-c1-basedata/: CMakeLists.txt  README.md  crm-c1-basedata.vcxproj  crm-c1-basedata.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c1-basedata/conf/: third-services.yaml
crm-cpp/crm-c1-basedata/controller/: Router.cpp
crm-cpp/crm-c2-customer-contact/: CMakeLists.txt  Macros.h  crm-c2-customer-contact.vcxproj  crm-c2-customer-contact.vcxproj.filters  main.cpp  stdafx.cpp  zh-dict.yaml
crm-cpp/crm-c2-customer-contact/controller/: ApiDeclarativeServicesHelper.h  OtherComponent.hpp  Router.cpp  SystemInterceptor.cpp
crm-cpp/crm-c2-customer-mycustomer/: CMakeLists.txt  README.md  crm-c2-customer-mycustomer.vcxproj  crm-c2-customer-mycustomer.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h  zh-dict.yaml
crm-cpp/crm-c2-customer-mycustomer/conf/: third-services.yaml
crm-cpp/crm-c2-customer-publiccustomer/: CMakeLists.txt  crm-c2-customer-publiccustomer.vcxproj  crm-c2-customer-publiccustomer.vcxproj.filters  zh-dict.yaml
crm-cpp/crm-c2-customer-servicerecords/: CMakeLists.txt  crm-c2-customer-servicerecords.vcxproj  crm-c2-customer-servicerecords.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c3-sales-contract/: CMakeLists.txt  crm-c3-sales-contract.vcxproj  crm-c3-sales-contract.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c3-sales-opportunities/: CMakeLists.txt  crm-c3-sales-opportunities.filters  crm-c3-sales-opportunities.vcxproj  crm-c3-sales-opportunities.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c4-collection-man/: CMakeLists.txt  crm-c4-collection-man.vcxproj  crm-c4-collection-man.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c4-sales-man/: CMakeLists.txt  crm-c4-sales-man.vcxproj  crm-c4-sales-man.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c5-financial-manager/: CMakeLists.txt  crm-c5-financial-manager.vcxproj  crm-c5-financial-manager.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c6-fundmanagement-fincapitalrecord/: CMakeLists.txt  README.md  crm-c6-fundmanagement-fincapitalrecord.vcxproj  crm-c6-fundmanagement-fincapitalrecord.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c6-fundmanagement-payment/: CMakeLists.txt  Macros.h  README.md  crm-c6-fundmanagement-payment.filters  crm-c6-fundmanagement-payment.vcxproj  main.cpp  zh-dict.yaml
crm-cpp/crm-c6-messages/: CMakeLists.txt  crm-c6-messages.vcxproj  crm-c6-messages.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c7-common/: CMakeLists.txt  Macros.h  README.md  crm-c7-common.vcxproj  crm-c7-common.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-c7-supplier-manage/: CMakeLists.txt  Macros.h  README.md  crm-c7-supplier-manage.vcxproj  crm-c7-supplier-manage.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/crm-inventory-manager/: .gitignore  CMakeLists.txt  crm-inventory-manager.vcxproj  crm-inventory-manager.vcxproj.filters  main.cpp  zh-dict.yaml
crm-cpp/lib-common/: lib-common.vcxproj  lib-common.vcxproj.filters
crm-cpp/lib-oatpp/: lib-oatpp.vcxproj  lib-oatpp.vcxproj.filters
crm-frontend/: .env  (+7 more)
(+2080 files in other folders)
